added models, video section on main page

--- a/index.html
+++ b/index.html
@@ -97,5 +97,8 @@ image: "img/NewTESS-Stirlings.jpg"
 
 {%include asideMain.html%}
 </div>
+<div class="container">
+	{%include mainVideos.html%}
+</div>
 
 <script type="text/javascript" src="js/TabJS.js"></script>
