--- a/machinesMining.html
+++ b/machinesMining.html
@@ -32,14 +32,14 @@ intro: "The special challenges and opportunities of turning regolith into metals
 	<aside>
 		<div class="sidePairTop">
 			<div class="framewrap frame16x9">
-				<iframe src="https://www.youtube.com/embed/FGYC0u566gs?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+				<iframe src="plutons.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 			</div>
 		</div>
 		<div class="sidePairBottom">
 			This lecture is from the <a href="http://www.lpi.usra.edu/lunar/moon101/"> Moon 101 series</a> by the Lunar and Planetary Institute. It gives a sense of the makeup and structure of the lunar crust, the forces at work on it, and some things to consider about working with it.</div>
 		<div class="sidePairTop">
 				<div class="framewrap frame16x9">
-					<iframe src="https://www.youtube.com/embed/-QqfKN_eFVQ?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+					<iframe src="MMM-moon.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 				</div>
 		</div>
 		<div class="sidePairBottom">
