--- a/machinesTransport.html
+++ b/machinesTransport.html
@@ -2,8 +2,7 @@
 layout: content
 title: Transport to the Moon and on it
 description: "Solar thermal power plants, nuclear reactors, solar power beamed from space, photovoltaic masts at the poles, and how flexible flywheels can store energy. Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance."
-headline: "Ships, Skyhooks, and Spaceports"
-intro: "From early on-orbit assembly to the skyhooks in the SITH (Skyhook Interplanetary Transport Hubs)"
+headline: "The Fleets of Space"
 ---
 <div class="container" id="transport">
 	<section>
@@ -26,7 +25,12 @@ intro: "From early on-orbit assembly to the skyhooks in the SITH (Skyhook Interp
 <div class="container" id="nuclearShuttles">
 {% include_relative _includes/transport/transportNuclearShuttles.html %}
 </div>
-
+<div class="container" id="ionDrive">
 {% include_relative _includes/transport/transportIondrive.html %}
+</div>
+<div class="container" id="PodShip">
 {% include_relative _includes/transport/transportPodShip.html %}
-{% include_relative _includes/transport/transportTethers.html %}
+</div>
+<div class="container" id="interplanetaryShips">
+{% include_relative _includes/transport/interplanetaryShips.html %}
+</div>
