--- a/videoProxy/youtubeVideo.html
+++ b/videoProxy/youtubeVideo.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
 permalink: /youtubeVideo.html
-modelPath: https://www.youtube.com/embed/vF--hweQ1Ec?autoplay=1
+modelPath: https://www.youtube.com/embed/vF--hweQ1Ec?rel=0&amp;autoplay=1
 linkImagePath: img/youtubeVideo.jpg
 ---
