--- a/modelProxy/DomeCity.html
+++ b/modelProxy/DomeCity.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
 permalink: /DomeCity.html
-modelPath: https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed?annotation=1&amp;autostart=1
-linkImagePath: img/thumb/DomeCityButton.jpg
+modelPath: https://sketchfab.com/models/044543e2b574432d85a1301df678148b/embed?annotation=1&amp;autostart=1
+linkImagePath: img/thumb/LalandeCity.jpg
 ---
