project page refinements

--- a/project.html
+++ b/project.html
@@ -1,127 +1,112 @@
 ---
 layout: default
-title: Moonwards Project Vision and Setup
-description: "Why it is important to colonize the Moon, and to plan publicly how a lunar settlement could really work. Where to get the files (all open source), who participates, and the chart for how the work is organized."
+title: About Moonwards, Resources
+description: "About Moonwards staff, guide to our files and software, and a list of resources for learning about space exploration."
 ---
 
-	<header>
-	<div id="Logo">
+<header>
+	<div id="Logo" style="margin-left: 60%; margin-right: 10%;">
 		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
-	</div>
-	<div class="intro">
-			<h1>Why This Matters</h1>
-			<p>	"We leave as we came and, God willing, as we shall return, with peace and hope for all mankind."
-			</p>
-			<p class="byline">
-				Gene Cernan, as he stepped off the Moon<br>Apollo 17, Dec. 19, 1972 <br>
-        <i>{% timeago 1972-12-19 %}</i></p>
 	</div>
 </header>
 <div class="container">
-	<section>
+
+<section>
+	<div class="outerDiv">
+		<div class="innerDiv">
+		<h1>About Us</h1>
+		<h2>Kim Holder</h2>
+		<p>
+			I went to art college after high school. Then to massage therapy school when i realized i needed a separate income from a flexible job in order to make art. Then i trained at a Zen center when i burned out from doing massage (which happens a lot actually
+			- the massage burn-out part). Meditation remains a core part of my life. After that bounced around for a few years and eventually headed down to Mexico. I have a fatigue condition which went unrecognized while i was young enough to push through it,
+			though it affected my life a lot. When that ceased to be an option things started going into a tailspin so badly i decided to leave Canada in a desperate bid to search for a solution in a new environment. I met my husband (which was the last thing
+			i expected) and ended up staying. I'm still here in central Mexico 15 years later.
+		</p>
+		<p>
+			In August of 2013, i finally found the diet and lifestyle that allowed me to have a normal energy level. Before that i'd struggled with lethargy, dopiness, sleepiness, and accompanying anxiety. It was the first time as an adult i'd been free of that for
+			more than a couple of weeks. My reaction quickly turned from 'Eureka!' to 'so now what?...'. I was in the middle of Mexico with all my time free (my husband has a successful business and is happy for me to use my time as i wish). I really wanted to
+			make up for lost time.
+		</p>
+		<p>
+			It took a while to find the right thing. I took to watching videos of successful people i admired to try to figure out what direction to take. It was quickly clear that scientists and engineers were my role models. One day i was watching an interview
+			of Elon Musk - who i'd never heard of until a few days before - by Salman Khan of Khan Academy. He started talking about going to Mars. Now, from my early teens i've been a big science fiction and science mag consumer, and i thought 'Mars? That makes
+			no sense. He seems like a smart guy, what's he doing?'. I had a small website (now defunct) and i started writing about that. Once i did i quickly realized i had strong feelings about this. Thus began Moonwards, a project i happily anticipate will
+			keep me busy for the rest of my life.
+		</p>
+		<h2>Sigvart Brendberg</h2>
+		<p>
+			I am a Norwegian high-school student, currently getting a science education. I live on a small and remote island, and dislike cities as much as you would expect. In the process of learning math, physics and other cool stuff, I realized how nice the free
+			software philosophy is. Starting there, I started my voyage to explore the world of computer programming and the internet.
+		</p>
+		<p>
+			On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.
+		</p>
+		<p>
+			In my free time, I code small games and simulators, play in a brass band, read tons of fantasy and science fiction, hang out with my crazy high-school friends (me being the most crazy), spend some weekends herding smaller Southern Sami kids at camps,
+			and attend some religious thingy. (Jesus is a cool guy, comparable to Sergej Korolev and Isaac Newton). Regarding political views, what happens on Earth stays on Earth. This is the Moon, and we have a lot of regolith to melt before we can start to
+			fight each other.
+		</p>
+		<p>
+			As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem. Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, create animations and write about
+			orbital mechanics and rocket engines. Mostly however, I discuss new ideas with Kim.
+		</p>
+	</div>
+</div>
+</section>
+
+<aside>
+	<figure class="sideDiv">
 		<div class="pixWrap">
-			<div class="pix">
-				<img src="img/Apollo14LEM-crop.jpg" alt="Apollo 14 Lunar Module above the Moon, with Lalande Crater below"
-				title="Apollo 14 Lunar Module above the Moon, with Lalande Crater below">
-			</div>
-		</div>
-	</section>
-	<aside>
-		<figure class="sideDiv">
-			<div class="pixWrap">
-				<a href="https://github.com/briligg/moonwards">
+			<a href="https://github.com/briligg/moonwards">
 				<img src="img/githubMark.jpg"></a>
-				<figcaption>
-					Click above to go to the Moonwards repository on GitHub. You can download all
-					the project files. They are under the Gnu Public License
-					v 3. If you are a GitHub member, you comment on some aspect of the
-					project there by clicking the Issues tab and opening a new issue.
-				</figcaption>
+			<figcaption>
+				Click above to go to the Moonwards repository on GitHub. You can download all the project files. They are under the Gnu Public License v 3. If you are a GitHub member, you comment on some aspect of the project there by clicking the Issues tab and opening
+				a new issue.
+			</figcaption>
 		</div>
 	</figure>
 	<div class="sideDiv" style="background-color: rgba(0,0,0,0.9)">
-			<h2>
+		<h2>
 			If you would like to be part of Moonwards, please email me at
 			kim@moonwards.com
 		</h2>
 	</div>
 	<div class="sideDiv">
-		The files for the 3d models shown on these pages can be downloaded from
-		our <a href="https://sketchfab.com/briligg/models">SketchFab page</a>.
+		In addition to the Blender file section in the repository, the files for the 3d models shown on these pages can be downloaded from our <a href="https://sketchfab.com/briligg/models">SketchFab page</a>.
 	</div>
 	<div class="sideDiv">
 		Are you a member of Stack Exchange? We have a
-		<a href="http://chat.stackexchange.com/rooms/37071/moonwards">chat room</a>
-		that is part of the <a href="https://space.stackexchange.com/">
+		<a href="http://chat.stackexchange.com/rooms/37071/moonwards">chat room</a> that is part of the <a href="https://space.stackexchange.com/">
 			Space Exploration</a> stack.
 	</div>
 	<div class="sideDiv">
 		<p>Some of the things we have are standalone and not integrated into the website, for example
-		<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
+			<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
 		<p>The interactive applets we have made can be downloaded from <a href="http://www.moonwards.com/GeoGebra/">www.moonwards.com/GeoGebra/</a>. The directory also contains quite a few that are not on the website yet.</p>
 		<p>We also have some datasets available at <a href="http://www.moonwards.com/json/engines.json">www.moonwards.com/json/engines.json</a> and <a href="http://www.moonwards.com/json/planets.json">www.moonwards.com/json/planets.json</a></p>
 	</div>
-  <div class="sideDiv">
-    <img style="width: 40%; border: none; margin-left: 30%;" src="img/gpl-dark-yellow.svg" alt="Logo for the Gnu Public License v3">
-    <p>All material on this website and in the GitHub repository - except the Moonwards logo - is licensed under the Gnu Public License v3. You can distribute and/or modify anything except the logo under the terms of that license. <a href="https://github.com/briligg/moonwards/blob/master/LICENSE.txt">Please see the terms of the license here.</a> The logo may be reproduced without prior permission only within the body of an article or comment, for purposes of documenting the project. It may not be used in any way that implies endorsement or participation by Moonwards, or association with Moonwards, without prior written permission.</p>
-  </div>
-	</aside>
+	<div class="sideDiv">
+		<img style="width: 40%; border: none; margin-left: 30%;" src="img/gpl-dark-yellow.svg" alt="Logo for the Gnu Public License v3">
+		<p>All material on this website and in the GitHub repository - except the Moonwards logo - is licensed under the Gnu Public License v3. You can distribute and/or modify anything except the logo under the terms of that license. <a href="https://github.com/briligg/moonwards/blob/master/LICENSE.txt">Please see the terms of the license here.</a>			The logo may be reproduced without prior permission only within the body of an article or comment, for purposes of documenting the project. It may not be used in any way that implies endorsement or participation by Moonwards, or association with Moonwards,
+			without prior written permission.</p>
+	</div>
+</aside>
 </div>
 <div class="container">
-	<section>
-					<div class="outerDiv">
-					<div class="innerDiv">
-							<h1>About Us</h1>
-							<h2>Kim Holder</h2>
-							<p>
-				I went to art college after high school. Then to massage therapy school when i realized i wasn't going to make any money from art.
-				Then i trained at a Zen center when i burned out from doing massage (which happens a lot actually - the massage burn-out part).
-				After that i, uh, sort of bounced around for a few years and eventually headed down to Mexico to try
-				to return to my artwork, where i met my husband and ended up staying. I'm still here in central Mexico 14 years later.
-							</p>
-							<p>
-				In August of 2013, i finally found the diet and lifestyle that allowed me to have a normal energy level.
-				Before that i'd struggled with lethargy, dopiness, sleepiness, and accompanying anxiety.
-				It was the first time as an adult i'd been free of that for more than a couple of weeks.
-				My reaction quickly turned from 'Eureka!' to 'so now what?...'. I was in the middle of Mexico with
-				all my time free (my husband has a successful business and is happy for me to use my time as i wish).
-				I really wanted to make up for lost time.
-							</p>
-							<p>
-				It took a while to find the right thing. I took to watching videos of successful people i admired
-				to try to figure out what direction to take. It was quickly clear that scientists and engineers were my role models.
-				One day i was watching an interview of Elon Musk - who i'd never heard of until a few days before - by Salman Khan of Khan Academy.
-				He started talking about going to Mars. Now, from my early teens i've been a big science fiction and science mag consumer, and i
-				thought 'Mars? That makes no sense. He seems like a smart guy, what's he doing?'.
-				So i decided to write up <a href="http://www.briligg.com/futuremoon.html">something</a> about that.
-				Thus began Moonwards, a project i happily anticipate will keep me busy for the rest of my life.
-							</p>
-							<h2>Sigvart Brendberg</h2>
-							<p>
-				I am a Norwegian high-school student, currently getting a science education.
-				I live on a small and remote island, and dislike cities as much as you would expect. In the process of learning math, physics and other cool stuff, I realized how nice the free software philosophy is.
-				Starting there, I started my voyage to explore the world of computer programming and the internet.
-							</p>
-							<p>
-				On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.
-							</p>
-							<p>
-				In my free time, I code small games and simulators, play in a brass band, read tons of fantasy and science fiction,
-				hang out with my crazy high-school friends (me being the most crazy), spend some weekends herding smaller Southern Sami kids at camps, and attend some religious thingy. (Jesus is a cool guy, comparable to Sergej Korolev and Isaac Newton).
-				Regarding political views, what happens on Earth stays on Earth. This is the Moon, and we have a lot of regolith to melt before we can start to fight each other.
-							</p>
-							<p>
-				As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem.
-				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, create animations and write about orbital mechanics and rocket engines.
-				Mostly however, I discuss new ideas with Kim.
-							</p>
-				</div>
-			</div>
-	</section>
-	<section id="resources">
+
+	<section id="resources" class="wide">
 		<div class="outerDiv">
 			<div class="innerDiv">
 				{% include resources.html %}
+			</div>
+		</div>
+	</section>
+</div>
+<div class="container">
+	<section>
+		<div class="pixWrap">
+			<div class="pix">
+				<img src="img/Apollo14LEM-crop.jpg" alt="Apollo 14 Lunar Module above the Moon, with Lalande Crater below" title="Apollo 14 Lunar Module above the Moon, with Lalande Crater below">
 			</div>
 		</div>
 	</section>
@@ -130,4 +115,5 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 
 
 </body>
+
 </html>
