new links to Verge3d app

--- a/modelProxy/STePP.html
+++ b/modelProxy/STePP.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
 permalink: /STePP.html
-modelPath: https://sketchfab.com/models/ee098ff6594544b9869f49c20fbb4258/embed?autostart=1
+modelPath: https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:bb4284d18c/applications/STEMP-flythrough/STEMP-flythrough.html
 linkImagePath: img/thumb/STePP-Button.jpg
 ---
