add newsletter, comments on content pages (but not Learn)

--- a/lalande.html
+++ b/lalande.html
@@ -5,8 +5,8 @@ stylesheet: "css/content.nest.sass.css"
 description: "Photos, models, and data on Lalande Crater, near the Moon's equator. Discussion of its properties, topography, mineral deposits, and the history of
 its documentation."
 headline: "Lalande Crater"
-intro: "Steep walls, riddled with boulders, fields of scree, full of fissures - there are few craters on the Moon like Lalande. This page gets about as nerdy as possible about lunar geography. I bet there
-is no place else in the solar system (beyond Earth) that has a fan page like this. Prepare for the full nerd treatment."
+intro: "Steep walls, riddled with boulders, fields of scree, full of fissures - there are few craters on the Moon like Lalande. This page gets about as nerdy as possible about lunar geography. I bet there is no place else in the solar system (beyond Earth) that has a fan page like this. Prepare for the full nerd treatment."
+comments: true
 ---
 <div class="container">
 	<section>
