--- a/machinesTransport.html
+++ b/machinesTransport.html
@@ -3,6 +3,7 @@ layout: content
 title: Transport to the Moon and on it
 description: "Solar thermal power plants, nuclear reactors, solar power beamed from space, photovoltaic masts at the poles, and how flexible flywheels can store energy. Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance."
 headline: "The Fleets of Space"
+content: true
 ---
 <div class="container" id="transport">
 	<section>
