--- a/project.html
+++ b/project.html
@@ -2,6 +2,7 @@
 layout: default
 title: About Moonwards, Resources
 description: "About Moonwards staff, guide to our files and software, and a list of resources for learning about space exploration."
+comments: true
 ---
 
 <header>
