--- a/machinesMining.html
+++ b/machinesMining.html
@@ -4,6 +4,7 @@ title: Lunar Mining and Refining
 description: "Solar thermal power plants, nuclear reactors, solar power beamed from space, photovoltaic masts at the poles, and how flexible flywheels can store energy. Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance."
 headline: "Lunar Mining and Refining"
 intro: "The special challenges and opportunities of turning regolith into metals, glass materials, oxygen, and more."
+comments: true
 ---
 
 <div class="container" id="mining">
