--- a/machinesPower.html
+++ b/machinesPower.html
@@ -4,6 +4,7 @@ title: Lunar Machines for Power
 description: "Solar thermal power plants, nuclear reactors, solar power beamed from space, photovoltaic masts at the poles, and how flexible flywheels can store energy. Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance."
 headline: "Power Infrastructure"
 intro: "Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance"
+comments: true
 ---
 <div class="container">
 	<section>
