comments added to machines.html, update config with plugins section

--- a/machines.html
+++ b/machines.html
@@ -4,6 +4,7 @@ title: Lunar Machines for Remote Work and Construction
 description: Machines designed to build and operate a Moon base, operated from Earth or by a small lunar crew.
 headline: "The Machines that make it Possible"
 intro: "Even to reach space we need incredibly complex machines. To live there we will need machines that can do any physical task we can, see as well or better, that anticipate, compensate, and make judgement calls. Recent advancements in robotics stand beside reusable rockets as new factors accelerating our advance into space. The Moon's harsh surface is no place for a human to work. Spacesuits make you very clumsy, and a ton of infrastructure is needed to keep you alive and safe. Bring on the robots."
+comment: true
 ---
 {% include_relative _includes/machines/machinesRobots.html %}
 {% include_relative _includes/machines/machinesBuilding.html %}
