small web content changes

--- a/machinesMining.html
+++ b/machinesMining.html
@@ -25,7 +25,7 @@ comments: true
 				</p>
 				<p>Just as it would usually be preferable to build reactor vessels that operate at higher temperatures so they consume less reactant or use one that is more common, a furnace that uses purely sun to produce useful products is usually preferable to using any chemical reaction at all. This becomes more true as infrastructure accumulates allowing furnaces to be larger, and made more from local materials or materials that at least don't come from Earth. As the timeline progresses, the energy supply on the Moon also becomes bigger and bigger. Because most of the energy supply is derived from plentiful and reliable sunlight, the advantage of energy-based approaches increases with time. Even at the beginning of settlement, approaches that use chemical reactions can compete only where the reactants are plentiful, are nearly completely recycled, and use simpler, cheaper vessels and less energy.
 				</p>
-				<p>An example of each of these approaches is examined following the chart.
+				<p>An example of each of these approaches is examined after the chart.
 				</p>
 			</div>
 		</div>
