--- a/project.html
+++ b/project.html
@@ -61,19 +61,17 @@ comments: true
 			<a href="https://github.com/briligg/moonwards">
 				<img src="img/githubMark.jpg"></a>
 			<figcaption>
-				Click above to go to the Moonwards repository on GitHub. You can download all the project files. They are under the Gnu Public License v 3. If you are a GitHub member, you comment on some aspect of the project there by clicking the Issues tab and opening
-				a new issue.
+				Click above to go to the Moonwards repository on GitHub. You can download all the files on the website. Except the 3d models which were bloating the repo, those are on the <a href="modelDownload.html">Download page</a>. Everything is under the Gnu Public License v 3. If you are a GitHub member, you can comment on some aspect of the project there by clicking the Issues tab and opening a new issue.
 			</figcaption>
 		</div>
 	</figure>
 	<div class="sideDiv" style="background-color: rgba(0,0,0,0.9)">
 		<h2>
-			If you would like to be part of Moonwards, please email me at
-			kim@moonwards.com
+			If you would like to be part of Moonwards, please email kim@moonwards.com
 		</h2>
 	</div>
 	<div class="sideDiv">
-		In addition to the Blender file section in the repository, the files for the 3d models shown on these pages can be downloaded from our <a href="https://sketchfab.com/briligg/models">SketchFab page</a>.
+		In addition to the Blender file section in the repository, the files for the 3d models on these pages can be downloaded from our <a href="https://sketchfab.com/briligg/models">Sketchfab page</a>.
 	</div>
 	<div class="sideDiv">
 		Are you a member of Stack Exchange? We have a
