--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ image: "img/NewTESS-Stirlings.jpg"
 	 							{% if forloop.index <= 5 %}
 	 						<li>
 	 							<h1><a href="{{post.url }}">{{post.title}}</a></h1>
-	 							<h3>{{ post.excerpt | strip_html}}</h3>
+	 							<p class="postindex">{{ post.excerpt | strip_html}}</p>
 	 						</li>
 	 						{% else %}
 	 						<li>
-	 							<h2><a href="{{post.url }}">{{post.title}}</a></h2>
-	 							<h3>{{ post.content | truncatewords: 50 | strip_html}}</h3>
+	 							<h4><a href="{{post.url }}">{{post.title}}</a></h4>
+	 							<p class="postindex">{{ post.content | truncatewords: 50 | strip_html}}</p>
 	 						</li>
 	 						{% endif%}
 	 					{% endfor %}
