add assets to project.html and change layout

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ image: "img/NewTESS-Stirlings.jpg"
 						vision can be.
 					</p>
 					<p>
-						All the project's files are on the <a href="https://github.com/briligg/moonwards"> GitHub repository of Moonwards</a>. It is at an early stage. It will always be 'under construction', though - that's its nature. You will see this website filling out and then get new content regularly as the project advances. You will see the models changing and new models being added, animated, and supplemented with other media. When the first, simple version of the virtual colony comes online, then we are really rolling. If you are inclined to take part, please use the contact options shown on the <a href="project.html">Project</a> page, or email me.
+						All the files used to build the website are on the <a href="https://github.com/briligg/moonwards"> GitHub repository of Moonwards</a>. The models and other assets can be found on the <a href="project.html">Project</a> page. It is at an early stage. It will always be 'under construction', though - that's its nature. You will see this website filling out and then get new content regularly as the project advances. You will see the models changing and new models being added, animated, and supplemented with other media. When the first, simple version of the virtual colony comes online, then we are really rolling. If you are inclined to take part, please use the contact options shown on the Progect page, or email me.
 					</p>
 					<p class="byline">
 						Kim Holder -- kim@moonwards.com
