update project page

--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: About Moonwards, Resources
-description: "About Moonwards staff, guide to our files and software, and a list of resources for learning about space exploration."
+title: Project Resources
+description: "Guide to our files and software, and a list of resources for learning about space exploration."
 comments: true
 ---
 
@@ -20,18 +20,7 @@ comments: true
 </section>
 
 
-<aside style="-webkit-flex: 1 1 300px; -moz-flex: 1 1 300px; -ms-flex: 1 1 300px; flex: 1 1 300px;">
-	<figure class="sideDiv">
-		<div class="pixWrap">
-			<a href="https://github.com/briligg/moonwards">
-				<img src="img/githubMark.jpg"></a>
-			<figcaption>
-				Click above to go to the Moonwards repository on GitHub and get all the files used on this website.  Everything is under the Gnu Public License v 3. If you are a GitHub member, you can comment on some aspect of the project there by clicking the Issues tab and opening a new issue.
-			</figcaption>
-		</div>
-	</figure>
-
-
+<aside>
 	<div class="sideDiv">
 		<p>Some of the things we have are standalone and not integrated into the website, for example
 			<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
@@ -60,50 +49,7 @@ comments: true
 		</div>
 	</section>
 </div>
-<div class="container">
-<section>
-	<div class="outerDiv">
-		<div class="innerDiv">
-		<h1>About Us</h1>
-		<h2>Kim Holder</h2>
-		<p>
-			I went to art college after high school. Then to massage therapy school when i realized i needed a separate income from a flexible job in order to make art. Then i trained at a Zen center when i burned out from doing massage (which happens a lot actually
-			- the massage burn-out part). Meditation remains a core part of my life. After that bounced around for a few years and eventually headed down to Mexico. I have a fatigue condition which went unrecognized while i was young enough to push through it,
-			though it affected my life a lot. When that ceased to be an option things started going into a tailspin so badly i decided to leave Canada in a desperate bid to search for a solution in a new environment. I met my husband (which was the last thing
-			i expected) and ended up staying. I'm still here in central Mexico 15 years later.
-		</p>
-		<p>
-			In August of 2013, i finally found the diet and lifestyle that allowed me to have a normal energy level. Before that i'd struggled with lethargy, dopiness, sleepiness, and accompanying anxiety. It was the first time as an adult i'd been free of that for
-			more than a couple of weeks. My reaction quickly turned from 'Eureka!' to 'so now what?...'. I was in the middle of Mexico with all my time free (my husband has a successful business and is happy for me to use my time as i wish). I really wanted to
-			make up for lost time.
-		</p>
-		<p>
-			It took a while to find the right thing. I took to watching videos of successful people i admired to try to figure out what direction to take. It was quickly clear that scientists and engineers were my role models. One day i was watching an interview
-			of Elon Musk - who i'd never heard of until a few days before - by Salman Khan of Khan Academy. He started talking about going to Mars. Now, from my early teens i've been a big science fiction and science mag consumer, and i thought 'Mars? That makes
-			no sense. He seems like a smart guy, what's he doing?'. I had a small website (now defunct) and i started writing about that. Once i did i quickly realized i had strong feelings about this. Thus began Moonwards, a project i happily anticipate will
-			keep me busy for the rest of my life.
-		</p>
-		<h2>Sigvart Brendberg</h2>
-		<p>
-			I am a Norwegian high-school student, currently getting a science education. I live on a small and remote island, and dislike cities as much as you would expect. In the process of learning math, physics and other cool stuff, I realized how nice the free
-			software philosophy is. Starting there, I started my voyage to explore the world of computer programming and the internet.
-		</p>
-		<p>
-			On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.
-		</p>
-		<p>
-			In my free time, I code small games and simulators, play in a brass band, read tons of fantasy and science fiction, hang out with my crazy high-school friends (me being the most crazy), spend some weekends herding smaller Southern Sami kids at camps,
-			and attend some religious thingy. (Jesus is a cool guy, comparable to Sergej Korolev and Isaac Newton). Regarding political views, what happens on Earth stays on Earth. This is the Moon, and we have a lot of regolith to melt before we can start to
-			fight each other.
-		</p>
-		<p>
-			As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem. Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, create animations and write about
-			orbital mechanics and rocket engines. Mostly however, I discuss new ideas with Kim.
-		</p>
-	</div>
-</div>
-</section>
-</div>
+
 
 
 </body>
