start putting app download on landing page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@ image: "img/NewTESS-Stirlings.jpg"
 
 {%include headerMain.html%}
 <div class="container">
+	<section class="wide">
+		<div class="outerDiv">
+			<div class="innerDiv">
+			<div class="pixHeader">
+				<h2>First Flying Camera Draft of Virtual Lunar Colony</h2>
+				<p>Now you can download the full colony and fly around the installations. Currently available for Windows and Linux.</p>
+			<ul style="margin-left: 25px; line-height: 40px;">
+				<li><h6>Windows 32 bit or 64 bit</h6></li>
+			<li><h6>Windows 64 bit</h6></li>
+				<li><h6>Linux</h6></li>
+			</ul>
+			<div class="pixBody">
+			<div class="pix" style="width: 400px;">
+				<img  src="img/CP-with-Spacer-1200.jpg">
+			</div>
+		</div>
+		</div>
+	</div>
+	</section>
 	<section>
 		<div class="outerDiv">
 			<ul class="tabs">
