fix img to resize

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@ image: "img/NewTESS-Stirlings.jpg"
 			<li><h6>Windows 64 bit</h6></li>
 				<li><h6>Linux</h6></li>
 			</ul>
+		</div>
 			<div class="pixBody">
-			<div class="pix" style="width: 400px;">
+			<div class="pix">
 				<img  src="img/CP-with-Spacer-1200.jpg">
 			</div>
 		</div>
 		</div>
-	</div>
+</div>
 	</section>
 	<section>
 		<div class="outerDiv">
