--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@ image: "img/NewTESS-Stirlings.jpg"
 			<div class="innerDiv">
 			<div class="pixHeader">
 				<h2>First Flying Camera Draft of Virtual Lunar Colony</h2>
-				<p>Now you can download the full colony and fly around the installations. Currently available for Windows and Linux.</p>
-			<ul style="margin-left: 25px; line-height: 40px;">
-				<li><h6>Windows 32 bit or 64 bit</h6></li>
-			<li><h6>Windows 64 bit</h6></li>
-				<li><h6>Linux</h6></li>
-			</ul>
+				<p>Now you can download the full colony and fly around the installations.</p>
+				<table width="95%">
+					<th>
+						<td><a href="downloads/Moonwards-Colony-Win32.zip" download><h6>Windows 32 bit</h6></a></td>
+						<td><a href="downloads/Moonwards-Colony-Win64.zip" download><h6>Windows 64 bit</h6></a></td>
+							<td><a href="downloads/Moonwards-Colony-Linux.zip" download><h6>Linux</h6></a></td>
+							<td><a href="downloads/Moonwards-Colony-OSX.zip" download><h6>Mac</h6></a></td>
+						</th>
+						</table>
 		</div>
 			<div class="pixBody">
 			<div class="pix">
