--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: defaultMinimal
 title: Moonwards Virtual Moon Colony Project
-stylesheet: "css/main.nest.sass.css"
+stylesheet: "css/main.css"
 description: "A realistic virtual lunar colony, showing how space
 settlement will affect our future. The technology and science of living on the Moon, the challenges and opportunities of low gravity, hard vacuum, high radiation, intense sun, large temperature swings, and the substances
 of the Moon."
@@ -16,7 +16,7 @@ image: "img/NewTESS-Stirlings.jpg"
 			<div class="innerDiv">
 			<div class="pixHeader">
 				<h2>Demo Draft of Virtual Lunar Colony</h2>
-				<p>Now you can download the full colony and fly around the installations.</p>
+				<p>Now you can download the full colony and fly around the installations. Download for:</p>
 				<table width="95%">
 					<th>
 						<td><a href="downloads/MoonwardsColony-Win.zip" download><h6>Windows</h6></a></td>
